<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.netxms</groupId>
   <artifactId>zest-rwt</artifactId>
   <version>2.0.12</version>
   <packaging>jar</packaging>
   <name>zest-rwt</name>
   <description>NetXMS Zest port for RWT</description>
   <url>https://github.com/netxms/zest-rwt</url>

   <licenses>
      <license>
         <name>GNU General Public License (GPL) v2</name>
         <url>http://www.gnu.org/licenses/gpl2.txt</url>
      </license>
   </licenses>

   <scm>
      <connection>scm:git:https://github.com/netxms/zest-rwt</connection>
      <developerConnection>scm:git:ssh://github.com/netxms/zest-rwt</developerConnection>
      <url>https://github.com/netxms/zest-rwt</url>
   </scm>

   <developers>
      <developer>
         <id>alex.kirhenshtein</id>
         <name>Alex Kirhenshtein</name>
         <email>alk@netxms.org</email>
         <organization>Raden Solutions</organization>
         <organizationUrl>https://radensolutions.com</organizationUrl>
         <roles>
            <role>developer</role>
         </roles>
         <timezone>Europe/Riga</timezone>
      </developer>
   </developers>

   <issueManagement>
      <system>GitHub Issues</system>
      <url>https://github.com/netxms/zest-rwt/issues</url>
   </issueManagement>

   <distributionManagement>
      <repository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
   </distributionManagement>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <build.finalName>${project.artifactId}-${project.version}</build.finalName>
      <lib.scope>compile</lib.scope>
      <rwt.version>3.29.0</rwt.version>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.eclipse.rap</groupId>
         <artifactId>org.eclipse.rap.jface</artifactId>
         <version>${rwt.version}</version>
         <scope>${lib.scope}</scope>
      </dependency>
      <dependency>
         <groupId>org.netxms</groupId>
         <artifactId>draw2d-rwt</artifactId>
         <version>3.10.103</version>
         <scope>${lib.scope}</scope>
      </dependency>
   </dependencies>

   <build>
      <finalName>${build.finalName}</finalName>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.3.0</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
            <configuration>
                <release>17</release>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
               <execution>
                  <id>attach-sources</id>
                  <goals>
                     <goal>jar-no-fork</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.8.0</version>
            <executions>
               <execution>
                  <id>attach-javadoc</id>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
            <configuration>
               <tags>
                  <tag>
                     <name>noreference</name>
                     <placement>a</placement>
                     <head>This method is not intended to be referenced by clients.</head>
                  </tag>
                  <tag>
                     <name>noextend</name>
                     <placement>a</placement>
                     <head>This interface is not intended to be extended by clients.</head>
                  </tag>
                   <tag>
                       <name>nooverride</name>
                       <placement>a</placement>
                       <head>This method is not intended to be re-implemented or extended.</head>
                   </tag>
                   <tag>
                       <name>noimplement</name>
                       <placement>a</placement>
                       <head>This interface is not intended to be implemented by clients.</head>
                   </tag>
                  <tag>
                     <name>tag</name>
                     <placement>a</placement>
                     <head>Tags:</head>
                  </tag>
                  <tag>
                     <name>input</name>
                     <placement>a</placement>
                     <head>Input:</head>
                  </tag>
               </tags>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <profiles>
      <profile>
         <id>publish</id>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>3.2.4</version>
                  <executions>
                     <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                           <goal>sign</goal>
                        </goals>
                     </execution>
                  </executions>
                  <configuration>
                     <repositoryId>ossrh</repositoryId>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>

</project>
